cleanup and improve solution recording
git-svn-id: svn://svn.code.sf.net/p/choco/code/trunk@1122 5779b9a9-2447-0410-887e-bb98d57c6de4